enable native access to silence warnings from libraries calling native methods